Closed Bug 330145 Opened 19 years ago Closed 19 years ago

Building of minimo from trunk - failed

Categories

(Minimo Graveyard :: General, defect)

WinCE
x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: dougt)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.12) Gecko/20050922 Firefox/1.0.7 (Debian package 1.0.7-1) Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.12) Gecko/20050922 Firefox/1.0.7 (Debian package 1.0.7-1) Building of minimo application, described in https://bugzilla.mozilla.org/show_bug.cgi?id=330142 failed. Reproducible: Always Steps to Reproduce: 1. Described in https://bugzilla.mozilla.org/show_bug.cgi?id=330142 2. add disable uconv option to configure 3. make Actual Results: X11R6/include -DMOZILLA_CLIENT -include ../../../mozilla-config.h -Wp,-MD,.deps/nsDeviceSupport.pp nsDeviceSupport.cpp nsDeviceSupport.cpp:89: error: 'BOOL' does not name a type nsDeviceSupport.cpp: In member function 'virtual nsresult nsDeviceSupport::Has(const char*, char**)': nsDeviceSupport.cpp:114: error: 'IsSmartphone' was not declared in this scope make[1]: *** [nsDeviceSupport.o] Error 1 make[1]: Leaving directory `/home/work/mozilla_new/mozilla/minimo/components/device' make: *** [all] Error 2 romaxa-sr:/home/work/mozilla_new/mozilla/minimo/components/device# Expected Results: Building finished
Attached patch PatchSplinter Review
Has been added patch for fixing this bug.
fixed on branch and trunk: Checking in nsDeviceSupport.cpp; /cvsroot/mozilla/minimo/components/device/nsDeviceSupport.cpp,v <-- nsDeviceSupport.cpp new revision: 1.3; previous revision: 1.2 done Checking in nsDeviceSupport.cpp; /cvsroot/mozilla/minimo/components/device/nsDeviceSupport.cpp,v <-- nsDeviceSupport.cpp new revision: 1.1.6.4; previous revision: 1.1.6.3 done
Status: UNCONFIRMED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: