Minimo only.  Fixing bustage when building on linux. patch by romaxa@gmail.com. bug 330145